--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -630,6 +630,8 @@ en:
           title: "User"
         reviewable_post:
           title: "Post"
+        reviewable_chat_message:
+          title: "Flagged chat message"
       approval:
         title: "Post Needs Approval"
         description: "We've received your new post but it needs to be approved by a moderator before it will appear. Please be patient."
